--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,15 +1,36 @@
 {% assign collection = collections['all'] %}
 {{ collection.title }}
+{{ collection }}
 
-<ul>
-    {% for product in collections.products %}
-        <li>
-            <a href="{{ product.url }}"> {{ product.title }}
-                {{ product.price | money}}
-                {% if product.available != true %}
-                    (SOLD OUT)
-                {%endif%}
-            </a>
-        </li>
-    {%endfor%}
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+<body>
+    <div class="container">
+        <div class="navbar">
+            <img src="#" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Region</a></li>
+                    <li><a href="">About</a></li>
+                </ul>
+            </nav>
+            <img src="#" class="menu-icon">
+        </div>
+        <div class="row">
+            <div class="col">
+                <h1>Sahara</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="col">
+            </div>
+        </div>
+
+
+    </div>
+</body>
+</html>
